# SIGERE-SYSTEM

./: README.md  app.py  pyproject.toml
backend/: pyproject.toml
backend/core/: settings.py  urls.py
backend/gerenciamento/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/gerenciamento/migrations/: 0001_initial.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
models/: database.py
routes/: requisicao.py
static/: styles.css
templates/: buscaREQ.html  cadastroREQ.html
