[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Natalia Macedo",email = "natalia.macedo@discente.ufra.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
